[gd_scene load_steps=11 format=3 uid="uid://bm821vwhvx6im"]

[ext_resource type="Theme" uid="uid://cnuol0ry2vobn" path="res://addons/gspot/assets/gspot_theme.tres" id="1_pfu8i"]
[ext_resource type="Script" path="res://ui/pattern_editor/pattern_editor.gd" id="2_wmvfk"]
[ext_resource type="Script" path="res://ui/pattern_editor/pattern_canvas.gd" id="3_nrm2g"]

[sub_resource type="LabelSettings" id="LabelSettings_wvl6g"]
font_size = 48
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.25098)
shadow_offset = Vector2(4, 4)

[sub_resource type="InputEventKey" id="InputEventKey_nskpy"]
device = -1
pressed = true
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_nqpmj"]
events = [SubResource("InputEventKey_nskpy")]

[sub_resource type="InputEventKey" id="InputEventKey_k1cxl"]
device = -1
pressed = true
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_qy1w2"]
events = [SubResource("InputEventKey_k1cxl")]

[sub_resource type="LabelSettings" id="LabelSettings_mqx4g"]
resource_local_to_scene = true
font_size = 48
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yixfq"]
bg_color = Color(0.244776, 0.244776, 0.244776, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.509286, 0.509286, 0.509286, 1)

[node name="PatternEditor" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pfu8i")
script = ExtResource("2_wmvfk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Pattern Editor"
label_settings = SubResource("LabelSettings_wvl6g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Record" type="Button" parent="MarginContainer/VBoxContainer/ControlsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_nqpmj")
text = "Record [1]"

[node name="Reset" type="Button" parent="MarginContainer/VBoxContainer/ControlsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_qy1w2")
text = "Reset [2]"

[node name="ElapsedTime" type="Label" parent="MarginContainer/VBoxContainer/ControlsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Time: 00:00"
label_settings = SubResource("LabelSettings_mqx4g")
vertical_alignment = 1

[node name="PatternCanvasContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
clip_children = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_yixfq")

[node name="PatternCanvas" type="Control" parent="MarginContainer/VBoxContainer/PatternCanvasContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_nrm2g")

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PatternName" type="TextEdit" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
placeholder_text = "Pattern Name"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Save"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="SaveDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Save Pattern..."
initial_position = 4
size = Vector2i(1280, 720)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.pattern")
use_native_dialog = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/ControlsContainer/Record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ControlsContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
